# Learning_ROS2

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_py_pkg/lib/my_py_pkg/: number_counter_reset  number_counter_server  rectangle_area_client  rectangle_area_server
install/my_py_pkg/share/my_py_pkg/: package.sh  package.xml
install/my_robot_bringup/share/my_robot_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh
install/my_robot_description/share/my_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_robot_gazebo_bringup/share/my_robot_gazebo_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.ps1  package.sh  package.xml
log/: latest_build
ros2_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros2_ws/log/: latest_build  latest_list
ros2_ws/src/MAE547/: CMakeLists.txt  package.xml
ros2_ws/src/actions_py/: setup.py
ros2_ws/src/autocar/: README.md  ros-foxy-desktop-full-install.sh
ros2_ws/src/mae547_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/mae_547/: CMakeLists.txt
ros2_ws/src/my_py_pkg/: setup.py
ros2_ws/src/my_robot_gazebo_bringup/: CMakeLists.txt
ros2_ws/src/my_robot_interfaces/: CMakeLists.txt
ros2_ws/src/my_robot_interfaces/srv/: ControlTurtle.srv
ros2_ws/src/radio_station_bringup/: CMakeLists.txt
ros2_ws/src/turtlesim_catch_em_all/: package.xml  setup.cfg  setup.py
(+520 files in other folders)
